feat: agregar agrupación de items duplicados y tests aleatorios
- Agrupa items con mismo producto y precio para evitar duplicados

- Mejora función cleanProductName para eliminar repeticiones y N/A

- Agrega tests aleatorios para diferentes sucursales (16 dic 2025 - 6 ene 2026)

- Limita tests a Cancún, Playa del Carmen, Puerto Vallarta, Cabos, Tulum y Madrid

- Agrega script test:random en package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:random": "ts-node tests/random-sales-data.test.ts"
   },
   "dependencies": {
     "jspdf": "^3.0.3",
